Blackpurl/src/objects/F_I_Product__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Finance</label>
        <referenceTo>Deal_Finance__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Item Description</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percentage__c</fullName>
        <description>Sales tax percentage</description>
        <label>Sales Tax Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF($Setup.Configurations__c.Tax_Included_Pricing__c ,  Price__c ,  Price__c  +  Sales_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Financing Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>F &amp; I Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FI-{00000000}</displayFormat>
        <label>F &amp; I Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F &amp; I Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>